src/test/ui/borrowck/borrowck-box-insensitivity.stderr
error[E0382]: use of moved value: `a`
  --> $DIR/borrowck-box-insensitivity.rs:27:9
   |
LL |     let _x = a.x;
   |         -- value moved here
LL |     //~^ value moved here
LL |     let _y = a.y; //~ ERROR use of moved
   |         ^^ value used here after move
   |
   = note: move occurs because `a.x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `a`
  --> $DIR/borrowck-box-insensitivity.rs:36:9
   |
LL |     let _x = a.x;
   |         -- value moved here
LL |     //~^ value moved here
LL |     let _y = a.y; //~ ERROR use of moved
   |         ^^ value used here after move
   |
   = note: move occurs because `a.x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `a`
  --> $DIR/borrowck-box-insensitivity.rs:45:15
   |
LL |     let _x = a.x;
   |         -- value moved here
LL |     //~^ value moved here
LL |     let _y = &a.y; //~ ERROR use of moved
   |               ^^^ value used here after move
   |
   = note: move occurs because `a.x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error[E0505]: cannot move out of `a.y` because it is borrowed
  --> $DIR/borrowck-box-insensitivity.rs:53:9
   |
LL |     let _x = &a.x;
   |               --- borrow of `a.x` occurs here
LL |     let _y = a.y;
   |         ^^ move out of `a.y` occurs here

error[E0503]: cannot use `a.y` because it was mutably borrowed
  --> $DIR/borrowck-box-insensitivity.rs:61:9
   |
LL |     let _x = &mut a.x;
   |                   --- borrow of `a.x` occurs here
LL |     let _y = a.y; //~ ERROR cannot use
   |         ^^ use of borrowed `a.x`

error[E0505]: cannot move out of `a.y` because it is borrowed
  --> $DIR/borrowck-box-insensitivity.rs:67:9
   |
LL |     let _x = &mut a.x;
   |                   --- borrow of `a.x` occurs here
LL |     let _y = a.y;
   |         ^^ move out of `a.y` occurs here

error[E0502]: cannot borrow `a` (via `a.y`) as immutable because `a` is also borrowed as mutable (via `a.x`)
  --> $DIR/borrowck-box-insensitivity.rs:75:15
   |
LL |     let _x = &mut a.x;
   |                   --- mutable borrow occurs here (via `a.x`)
LL |     let _y = &a.y; //~ ERROR cannot borrow
   |               ^^^ immutable borrow occurs here (via `a.y`)
LL |     //~^ immutable borrow occurs here (via `a.y`)
LL | }
   | - mutable borrow ends here

error[E0502]: cannot borrow `a` (via `a.y`) as mutable because `a` is also borrowed as immutable (via `a.x`)
  --> $DIR/borrowck-box-insensitivity.rs:82:19
   |
LL |     let _x = &a.x;
   |               --- immutable borrow occurs here (via `a.x`)
LL |     let _y = &mut a.y; //~ ERROR cannot borrow
   |                   ^^^ mutable borrow occurs here (via `a.y`)
LL |     //~^ mutable borrow occurs here (via `a.y`)
LL | }
   | - immutable borrow ends here

error[E0382]: use of collaterally moved value: `a.y`
  --> $DIR/borrowck-box-insensitivity.rs:90:9
   |
LL |     let _x = a.x.x;
   |         -- value moved here
LL |     //~^ value moved here
LL |     let _y = a.y; //~ ERROR use of collaterally moved
   |         ^^ value used here after move
   |
   = note: move occurs because `a.x.x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error[E0382]: use of collaterally moved value: `a.y`
  --> $DIR/borrowck-box-insensitivity.rs:98:9
   |
LL |     let _x = a.x.x;
   |         -- value moved here
LL |     //~^ value moved here
LL |     let _y = a.y; //~ ERROR use of collaterally moved
   |         ^^ value used here after move
   |
   = note: move occurs because `a.x.x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error[E0382]: use of collaterally moved value: `a.y`
  --> $DIR/borrowck-box-insensitivity.rs:106:15
   |
LL |     let _x = a.x.x;
   |         -- value moved here
LL |     //~^ value moved here
LL |     let _y = &a.y; //~ ERROR use of collaterally moved
   |               ^^^ value used here after move
   |
   = note: move occurs because `a.x.x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error[E0505]: cannot move out of `a.y` because it is borrowed
  --> $DIR/borrowck-box-insensitivity.rs:114:9
   |
LL |     let _x = &a.x.x;
   |               ----- borrow of `a.x.x` occurs here
LL |     //~^ borrow of `a.x.x` occurs here
LL |     let _y = a.y;
   |         ^^ move out of `a.y` occurs here

error[E0503]: cannot use `a.y` because it was mutably borrowed
  --> $DIR/borrowck-box-insensitivity.rs:122:9
   |
LL |     let _x = &mut a.x.x;
   |                   ----- borrow of `a.x.x` occurs here
LL |     let _y = a.y; //~ ERROR cannot use
   |         ^^ use of borrowed `a.x.x`

error[E0505]: cannot move out of `a.y` because it is borrowed
  --> $DIR/borrowck-box-insensitivity.rs:128:9
   |
LL |     let _x = &mut a.x.x;
   |                   ----- borrow of `a.x.x` occurs here
LL |     let _y = a.y;
   |         ^^ move out of `a.y` occurs here

error[E0502]: cannot borrow `a.y` as immutable because `a.x.x` is also borrowed as mutable
  --> $DIR/borrowck-box-insensitivity.rs:137:15
   |
LL |     let _x = &mut a.x.x;
   |                   ----- mutable borrow occurs here
LL |     //~^ mutable borrow occurs here
LL |     let _y = &a.y; //~ ERROR cannot borrow
   |               ^^^ immutable borrow occurs here
LL |     //~^ immutable borrow occurs here
LL | }
   | - mutable borrow ends here

error[E0502]: cannot borrow `a.y` as mutable because `a.x.x` is also borrowed as immutable
  --> $DIR/borrowck-box-insensitivity.rs:145:19
   |
LL |     let _x = &a.x.x;
   |               ----- immutable borrow occurs here
LL |     //~^ immutable borrow occurs here
LL |     let _y = &mut a.y; //~ ERROR cannot borrow
   |                   ^^^ mutable borrow occurs here
LL |     //~^ mutable borrow occurs here
LL | }
   | - immutable borrow ends here

error: aborting due to 16 previous errors

Some errors occurred: E0382, E0502, E0503, E0505.
For more information about an error, try `rustc --explain E0382`.
